--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
   <groupId>test_project</groupId>
   <artifactId>project_1</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.1</version>
   <packaging>war</packaging>
 
   <name>project_1 Maven Webapp</name>
